--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -318,11 +318,11 @@ pipeline {
             }
           }
         }
-        stage('Release Notes') {
+        stage('GitHub Release') {
           steps {
             withGhEnv(forceInstallation: true, version: '2.4.0') {
               dir("${BASE_DIR}"){
-                cmd(label: 'make release-notes', script: 'make -C .ci release-notes')
+                cmd(label: 'make github-release', script: 'make -C .ci github-release')
               }
             }
           }
