feat: OpenTelemetry Bridge (#2641)
Once enabled with `opentelemetryBridgeEnabled: true` (false by default), the
APM agent will register Tracer and ContextManager providers with
`@opentelemetry/api` allowing users to use the OpenTelemetry API for
manual tracing in their code, as an alternative to the APM agent's
public API. The OTel bridge is considered experimental for now.

Design/dev notes are at lib/opentelemetry-bridge/README.md

Closes: #2369
Spec: https://github.com/elastic/apm/blob/main/specs/agents/tracing-api-otel.md

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
   "ignorePatterns": [
     "/.nyc_output",
     "/build",
+    "node_modules",
+    "/lib/opentelemetry-bridge/opentelemetry-core-mini",
     "/test/babel/out.js",
     "/test/sourcemaps/fixtures/lib",
     "/test/stacktraces/fixtures/dist",
