test: fix running benchmarks
I think this change from #2627 may have broken running the benchmarks.

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -383,7 +383,7 @@ pipeline {
       environment {
         HOME = "${env.WORKSPACE}"
         RESULT_FILE = 'apm-agent-benchmark-results.json'
-        BENCH_NODE_VERSION = '14'
+        NODE_VERSION = '14'
       }
       when {
         beforeAgent true
@@ -402,7 +402,7 @@ pipeline {
             deleteDir()
             unstash 'source'
             dir(BASE_DIR){
-              sh '.ci/scripts/run-benchmarks.sh "${RESULT_FILE}" "${BENCH_NODE_VERSION}"'
+              sh '.ci/scripts/run-benchmarks.sh "${RESULT_FILE}" "${NODE_VERSION}"'
             }
           }
         }
