--- a/.tav.yml
+++ b/.tav.yml
@@ -411,49 +411,13 @@ pug:
   node: '>8'
   commands: node test/instrumentation/modules/pug.test.js
 
-# hapi and @hapi/hapi
+# @hapi/hapi
 # - Package name: Starting with v17.9.0 and v18.2.0 the name changed from
-#   'hapi' to '@hapi/hapi'.
+#   'hapi' to '@hapi/hapi'. Instrumentation for the old 'hapi' is now deprecated
+#   and untested; it will be dropped in the next major version of the agent.
 # - Node version compat:
-#   - hapi@15: supports node >=v4; breaks on node v14 (usage of `os.tmpDir()`)
-#   - hapi@16: supports node >=v4
-#   - hapi@17, @hapi/hapi@17: supports node >=v8.12.0 (per its README);
-#     the instrumentation changed significantly for this version
-#   - hapi@18, @hapi/hapi@18: supports node >=v8.12.0 (per its README)
 #   - @hapi/hapi@19: supports node >=v12 (judging from commit 50d8d7d)
 #   - @hapi/hapi@20: appears (from travis template refs) to support node >=v12
-hapi-v9-v15:
-  name: hapi
-  versions: '>=9.0.1 <16.0.0'
-  node: '>=4 <14'
-  commands:
-    - node test/instrumentation/modules/hapi/basic-legacy-path.test.js
-    - node test/instrumentation/modules/hapi/set-framework-hapi.test.js
-hapi-v16:
-  name: hapi
-  versions: '>=16.0.0 <17.0.0'
-  node: '>=4'
-  commands:
-    - node test/instrumentation/modules/hapi/basic-legacy-path.test.js
-    - node test/instrumentation/modules/hapi/set-framework-hapi.test.js
-hapi-prenodev15:
-  name: hapi
-  versions: '>=17.0.0'
-  node: '>=8.12.0 <15.0.0'
-  commands:
-    - node test/instrumentation/modules/hapi/basic-legacy-path.test.js
-    - node test/instrumentation/modules/hapi/set-framework-hapi.test.js
-hapi:
-  name: hapi
-  # Work around https://github.com/npm/cli/issues/2267 in npm@7.
-  # Note: An alternative might be to just not test the "hapi" package with
-  # node >= 15, given that "hapi" was deprecated before node v16.
-  preinstall: rm -rf node_modules/hapi
-  node: '>=15.0.0'
-  versions: '>=17.0.0'
-  commands:
-    - node test/instrumentation/modules/hapi/basic-legacy-path.test.js
-    - node test/instrumentation/modules/hapi/set-framework-hapi.test.js
 '@hapi/hapi-v17-v18':
   name: '@hapi/hapi'
   versions: '>=17.0.0 <19.0.0'
