--- a/.tav.yml
+++ b/.tav.yml
@@ -64,14 +64,19 @@ redis:
 #   versions: '^4.0.0'
 # However, there are a *lot* of ioredis releases, so we statically list a
 # subset (the first, plus then the latest in each major.minor).
-ioredis-old:
+ioredis-v2-v4:
   name: ioredis
   versions: '2.0.0 || 2.0.1 || 2.1.0 || 2.2.0 || 2.3.1 || 2.4.3 || 2.5.0 || 3.0.0 || 3.1.4 || 3.2.2 || >3.2.2 <4'
   commands: node test/instrumentation/modules/ioredis.test.js
-ioredis-new:
+ioredis-v4-v5:
   name: ioredis
   versions: '4.0.0 || 4.0.2 || 4.1.0 || 4.2.3 || 4.3.1 || 4.4.0 || 4.5.1 || 4.6.3 || 4.7.0 || 4.8.0 || 4.9.0 || 4.9.5 || 4.10.4 || 4.11.2 || 4.12.2 || 4.13.1 || 4.14.4 || 4.15.1 || 4.16.3 || 4.17.3 || 4.18.0 || 4.19.4 || 4.20.0 || 4.21.0 || 4.22.0 || 4.23.1 || 4.24.6 || 4.25.0 || 4.26.0 || 4.27.11 || ^4.28.0'
   node: '>=6'
+  commands: node test/instrumentation/modules/ioredis.test.js
+ioredis:
+  name: ioredis
+  versions: '^5.0.0'
+  node: '>=12.22.0'
   commands: node test/instrumentation/modules/ioredis.test.js
 
 pg-old-node:
