fix: build of Lambda layer broke in CI
The `BRANCH_NAME=... make -C .ci dist` failed on
    cp: ../build/aws/elastic-apm-node-lambda-layer-...zip: No such file or directory
because the "../build/aws" dir had not been created.
This was broken in #2627.

--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -8,6 +8,7 @@ export AWS_FOLDER
 .PHONY: dist
 dist: validate-branch-name
 	../dev-utils/make-lambda-layer-zip.sh
+	@mkdir -p $(AWS_FOLDER)
 	cp $(LAMBDA_LAYER_ZIP_FILE) $(AWS_FOLDER)/elastic-apm-node-lambda-layer-$(BRANCH_NAME).zip
 
 .PHONY: clean
