--- a/.tav.yml
+++ b/.tav.yml
@@ -128,20 +128,24 @@ bluebird:
   commands:
     - node test/instrumentation/modules/bluebird/bluebird.test.js
     - node test/instrumentation/modules/bluebird/cancel.test.js
-knex-old:
+# knex (https://github.com/knex/knex/blob/master/UPGRADING.md)
+# - knex 0.18.0 min supported node is v8
+# - knex 0.21.0 min supported node is v10
+# - knex 1.0.0 min supported node is v12
+knex-v0.9-v0.17:
   name: knex
   # v0.16.4 accidentally dropped support for Node.js 6
   versions: ^0.16.5 || <0.16.4 >=0.16.0 || ^0.15.0 || ^0.14.0 || ^0.13.0 || ^0.12.5 || <0.12.4 >0.11.6 || <0.11.6 >0.9.0
   commands: node test/instrumentation/modules/pg/knex.test.js
-knex-new:
+knex-v0.17-v0.21:
   name: knex
   node: '>=8.6.0'
   versions: '>=0.17 <0.21'
   commands: node test/instrumentation/modules/pg/knex.test.js
-knex-gt-nodev8:
+knex-v0.21-v1:
   name: knex
   node: '>=10.22.0'
-  versions: '>=0.21 <0.22'
+  versions: '>=0.21 <1' # Use '<1' to catch a 0.96.x release if there ever is one.
   commands: node test/instrumentation/modules/pg/knex.test.js
 ws-old:
   name: ws
