--- a/.tav.yml
+++ b/.tav.yml
@@ -494,10 +494,18 @@ fastify-v2:
     - node test/instrumentation/modules/fastify/fastify.test.js
     - node test/instrumentation/modules/fastify/async-await.test.js
     - node test/instrumentation/modules/fastify/set-framework.test.js
+fastify-v3:
+  name: fastify
+  versions: '>=3.0.0 <4'
+  node: '>=10'
+  commands:
+    - node test/instrumentation/modules/fastify/fastify.test.js
+    - node test/instrumentation/modules/fastify/async-await.test.js
+    - node test/instrumentation/modules/fastify/set-framework.test.js
 fastify:
   name: fastify
-  versions: '>=3.0.0'
-  node: '>=10'
+  versions: '>=4'
+  node: '>=14'
   commands:
     - node test/instrumentation/modules/fastify/fastify.test.js
     - node test/instrumentation/modules/fastify/async-await.test.js
