graphql patch #2 from @trentm

--- a/.tav.yml
+++ b/.tav.yml
@@ -156,10 +156,17 @@ ws-new:
   node: '>=8.6.0'
   versions: '>=7 <8'
   commands: node test/instrumentation/modules/ws.test.js
+
+graphql-v0.7-v16:
+  preinstall: npm uninstall express-graphql
+  versions: '>=0.7.0 <0.11.0 || >=0.11.1 <16'
+  commands: node test/instrumentation/modules/graphql.test.js
 graphql:
   preinstall: npm uninstall express-graphql
-  versions: '>=0.7.0 <0.11.0 || >=0.11.1 <16.0.0'
+  node: '>=12'
+  versions: '>=16.0.0 <17'
   commands: node test/instrumentation/modules/graphql.test.js
+
 express:
   versions: '>=4'
   commands:
