use better license file name matching when generating the notice file; also add 'npm run lint:license-files' so that lint fails if a new dep doesn't have a license or license file that will be needed for release

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /test/types/transpile/index.js
 /test/types/transpile-default/index.js
 /test-suite-output.tap
+/lint-license-files.out
 
 # Folders to ignore
 /.nyc_output
