--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "backport": "backport",
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
-    "lint": "eslint .  # requires node >=8.10",
+    "lint": "npm run lint:eslint && npm run lint:license-files",
+    "lint:eslint": "eslint .  # requires node >=8.10",
     "lint:fix": "eslint --fix .  # requires node >=8.10",
+    "lint:license-files": "./dev-utils/gen-notice.sh . >./lint-license-files.out",
     "coverage": "COVERAGE=true ./test/script/run_tests.sh",
     "test": "./test/script/run_tests.sh",
     "test:deps": "dependency-check start.js index.js 'lib/**/*.js' 'test/**/*.js' --no-dev -i async_hooks -i perf_hooks -i parseurl",
