use eslint-plugin-license-header for lic header checking
This commit is just the support for adding license headers and linting
and the change to *one* js file: lib/agent.js.  The large change to
add the header to all files will come in subsequent changes.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,12 @@
     "node": true
   },
   "extends": "standard",
-  "rules": {},
+  "plugins": [
+    "license-header"
+  ],
+  "rules": {
+    "license-header/header": [ "error", "./dev-utils/license-header.js" ]
+  },
   "ignorePatterns": [
     "/.nyc_output",
     "/build",
