chore: update to got@10 and stop there
We use 'got' in our tests only to test its usage by mimic-response.
got@11 dropped usage of mimic-response, so there is no point having
anything later than got@10.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    ignore:
+      # Lock at current got@10. See comment in .tav.yml.
+      - dependency-name: "got"
     reviewers:
       - "elastic/apm-agent-node-js"
