be specific about the versions of got to ignore. This means if there *is* a newer got@10, then dependabot will still suggest it

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,6 @@ updates:
     ignore:
       # Lock at current got@10. See comment in .tav.yml.
       - dependency-name: "got"
+        versions: [">=11"]
     reviewers:
       - "elastic/apm-agent-node-js"
