--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    ignore:
+      # Lock at current got@10. See comment in .tav.yml.
+      - dependency-name: "got"
+        versions: [">=11"]
     reviewers:
       - "elastic/apm-agent-node-js"
