--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "dependencies": {
     "@elastic/ecs-pino-format": "^1.2.0",
     "@opentelemetry/api": "^1.1.0",
+    "@opentelemetry/sdk-metrics-base": "^0.29.2",
     "after-all-results": "^2.0.0",
     "async-cache": "^1.1.0",
     "async-value-promise": "^1.1.1",
