--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -140,4 +140,15 @@ jobs:
     - run: docker ps  # show the services against which we'll be testing
     - run: npm install
     - run: npm ls --all || true
-    - run: npm test
+    - name: npm test
+      run: npm test
+    - name: debug test_output
+      run: ls test_output/*.tap || true # ls test_output/*.tap | while read f; do cat $f | ./node_modules/.bin/tap-junit > $f.junit.xml; done
+    - uses: inception-health/otel-upload-test-artifact-action@latest
+      if: always()
+      with:
+        jobName: "test-vers"
+        stepName: "npm test (${{ matrix.node }})"
+        path: "test_output/*.junit.xml"
+        type: "junit"
+        githubToken: ${{ secrets.GITHUB_TOKEN }}
