--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -2,7 +2,7 @@ name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
-    workflows: ["Lint", "Test"]
+    workflows: [Lint, Test]
     types: [completed]
 
 jobs:
