--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "url": "git://github.com/elastic/apm-agent-nodejs.git"
   },
   "engines": {
-    "node": "^8.6.0 || 10 || 12 || 14 || 16 || 17 || 18"
+    "node": "^8.6.0 || 10 || 12 || 14 || 16 || 17 || 18 || 19"
   },
   "keywords": [
     "opbeat",
