--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -146,6 +146,7 @@ jobs:
       run: ls test_output/*.* || true
     - uses: v1v/otel-upload-test-artifact-action@v2
       if: always()
+      continue-on-error: true
       with:
         jobName: "test-vers (${{ matrix.node }})"
         stepName: "npm test"
