ci: use the microbenchmarks-pool

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -371,7 +371,7 @@ pipeline {
       The result JSON files are also archive into Jenkins.
     */
     stage('Benchmarks') {
-      agent { label 'metal' }
+      agent { label 'microbenchmarks-pool' }
       options { skipDefaultCheckout() }
       environment {
         HOME = "${env.WORKSPACE}"
