--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:tav": "tav --quiet",
     "test:docs": "./test/script/docker/run_docs.sh",
     "test:types": "tsc --project test/types/tsconfig.json && tsc --project test/types/transpile/tsconfig.json && node test/types/transpile/index.js && tsc --project test/types/transpile-default/tsconfig.json && node test/types/transpile-default/index.js",
-    "test:babel": "babel test/babel/src.js --out-file test/babel/out.js && node test/babel/out.js",
+    "test:babel": "babel test/babel/src.js --out-file test/babel/out.js && cd test/babel && node out.js",
     "test:esm": "node --experimental-modules test/esm/index.mjs",
     "bench": "./test/benchmarks/scripts/run-benchmarks.sh",
     "bench:ci": "./test/benchmarks/scripts/run-benchmarks-ci.sh",
