Add "exports" so pure ESM can `import 'elastic-apm-node/start'` without.
This is experimental. I'm not sure if there are side-effects.
See https://github.com/elastic/apm-agent-nodejs/issues/1967#issuecomment-1179364683

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "The official Elastic APM agent for Node.js",
   "main": "index.js",
   "types": "index.d.ts",
+  "exports": {
+    ".": "./index.js",
+    "./start": "./start.js"
+  },
   "scripts": {
     "backport": "backport",
     "docs:open": "PREVIEW=1 npm run docs:build",
