--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "/.nyc_output",
     "/build",
     "node_modules",
+    "/examples/esbuild/dist",
+    "/examples/typescript/dist",
     "/lib/opentelemetry-bridge/opentelemetry-core-mini",
     "/test/babel/out.js",
     "/test/lambda/fixtures/esbuild-bundled-handler/hello.js",
