feat: undici and `fetch()` instrumentation
Closes: #2383

--- a/.tav.yml
+++ b/.tav.yml
@@ -551,3 +551,10 @@ aws-sdk:
     - node test/instrumentation/modules/aws-sdk/sns.test.js
     - node test/instrumentation/modules/aws-sdk/sqs.test.js
     - node test/instrumentation/modules/aws-sdk/dynamodb.test.js
+
+# undici@4.7.0 added its diagnostics_channel support.
+undici:
+  versions: '>=4.7.0 <6'
+  commands: node test/instrumentation/modules/undici.test.js
+  node: '>=14.17.0' # when diagnostics_channel was added
+
