--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "container-info": "^1.0.1",
     "dashdash": "^2.0.0",
     "dependency-check": "^4.1.0",
+    "diagnostics_channel": "^1.1.0",
     "elasticsearch": "^16.7.3",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
