feat: 'elasticsearchCaptureBodyUrls' config option
This adds a new config option, per the
'elasticsearch_capture_body_urls' cross-agent spec, to control for which
ES client requests the request body is captured. By default it is just
the body of search-related APIs. The use case for configuring this is
to capture for *all* requests for reply in Kibana performance work. This
option is not expected to be used often.

--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@elastic/elasticsearch": "^8.2.0-patch.1",
+    "@elastic/elasticsearch7": "npm:@elastic/elasticsearch@^7.17.0",
+    "@elastic/elasticsearch": "^8.2.1",
     "@elastic/elasticsearch-canary": "^8.2.0-canary.2",
     "@fastify/formbody": "^7.0.1",
     "@hapi/hapi": "^20.1.2",
