--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
     "coverage": "COVERAGE=true ./test/script/run_tests.sh",
     "test": "./test/script/run_tests.sh",
-    "test:deps": "dependency-check start.js index.js 'lib/**/*.js' 'test/**/*.js' --no-dev -i async_hooks -i perf_hooks -i parseurl",
+    "test:deps": "dependency-check start.js index.js 'lib/**/*.js' 'test/**/*.js' --no-dev -i async_hooks -i perf_hooks -i parseurl -i node:http",
     "test:tav": "tav --quiet",
     "test:docs": "./test/script/docker/run_docs.sh",
     "test:types": "tsc --project test/types/tsconfig.json && tsc --project test/types/transpile/tsconfig.json && node test/types/transpile/index.js && tsc --project test/types/transpile-default/tsconfig.json && node test/types/transpile-default/index.js",
@@ -106,7 +106,7 @@
     "original-url": "^1.2.3",
     "pino": "^6.11.2",
     "relative-microtime": "^2.0.0",
-    "require-in-the-middle": "^5.0.3",
+    "require-in-the-middle": "^5.2.0",
     "semver": "^6.3.0",
     "set-cookie-serde": "^1.0.0",
     "shallow-clone-shim": "^2.0.0",
