--- a/.tav.yml
+++ b/.tav.yml
@@ -360,15 +360,30 @@ express-queue:
   versions: '>=0.0.11'
   commands: node test/instrumentation/modules/express-queue.test.js
 
-koa-router:
+koa-router-v5-v11:
+  name: koa-router
+  versions: '>=5.2.0 <11'
   node: '>=6.0.0'
   peerDependencies: koa@2
-  versions: '>=5.2.0 <11'
   commands: node test/instrumentation/modules/koa-router/old-name.test.js
-'@koa/router':
+koa-router:
+  name: koa-router
+  versions: '>=11 <13'
+  node: '>=12.0.0'
+  peerDependencies: koa@2
+  commands: node test/instrumentation/modules/koa-router/old-name.test.js
+
+'@koa/router-v8-v11':
+  name: '@koa-router'
+  versions: '>=8 <11'
   node: '>=8.0.0'
   peerDependencies: koa@2
-  versions: '>=8 <11'
+  commands: node test/instrumentation/modules/koa-router/new-name.test.js
+'@koa/router':
+  name: '@koa-router'
+  versions: '>=11 <13'
+  node: '>=12.0.0'
+  peerDependencies: koa@2
   commands: node test/instrumentation/modules/koa-router/new-name.test.js
 
 elasticsearch:
