fix: graphql instrumentation for versions <=0.9 were broken
The changes in #2761 to support graphql@16 accidentally broken
instrumentation for really old graphql (versions before 0.10.0).
This wasn't noticed because the .tav.yml block for older graphql
versions didn't have `name: graphql`, so it was never run in CI.

--- a/.tav.yml
+++ b/.tav.yml
@@ -159,10 +159,12 @@ ws-new:
   commands: node test/instrumentation/modules/ws.test.js
 
 graphql-v0.7-v16:
+  name: graphql
   preinstall: npm uninstall express-graphql
   versions: '>=0.7.0 <0.11.0 || >=0.11.1 <16'
   commands: node test/instrumentation/modules/graphql.test.js
 graphql:
+  name: graphql
   preinstall: npm uninstall express-graphql
   node: '>=12'
   versions: '>=16.0.0 <17'
