test: lock to mongo:5 container, recently released mongo:6 breaks our healthcheck
With MongoDB 6 containers (released in the last week), the `mongo`
binary is gone, replaced by `mongosh`.
See https://github.com/docker-library/mongo/issues/558

Our tests were using `mongo:latest`. For now let's lock to mongo:5 and
then have a separate issue for updating container versions for testing.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,7 +68,7 @@ jobs:
           POSTGRES_HOST_AUTH_METHOD: 'trust'
 
       mongodb:
-        image: mongo
+        image: mongo:5
         ports:
           - 27017:27017
         volumes:
