--- a/.tav.yml
+++ b/.tav.yml
@@ -376,13 +376,13 @@ koa-router:
   commands: node test/instrumentation/modules/koa-router/old-name.test.js
 
 '@koa/router-v8-v11':
-  name: '@koa-router'
+  name: '@koa/router'
   versions: '>=8 <11'
   node: '>=8.0.0'
   peerDependencies: koa@2
   commands: node test/instrumentation/modules/koa-router/new-name.test.js
 '@koa/router':
-  name: '@koa-router'
+  name: '@koa/router'
   versions: '>=11 <13'
   node: '>=12.0.0'
   peerDependencies: koa@2
@@ -434,9 +434,11 @@ handlebars:
   commands: node test/instrumentation/modules/handlebars.test.js
 # Pug v3 dropped node v8 support (https://github.com/pugjs/pug/releases/tag/pug%403.0.0).
 pug-v2:
+  name: 'pug'
   versions: '0.1.0 || >2.0.0 <3.0.0'
   commands: node test/instrumentation/modules/pug.test.js
 pug:
+  name: 'pug'
   versions: '>=3.0.0'
   node: '>8'
   commands: node test/instrumentation/modules/pug.test.js
