--- a/.tav.yml
+++ b/.tav.yml
@@ -178,92 +178,6 @@ express:
     - node test/instrumentation/modules/express/capture-exceptions-on.test.js
     - node test/instrumentation/modules/express/set-framework.test.js
 
-express-graphql-0.6.1_graphql-0.8:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.8.2
-  versions: '0.6.1'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-
-express-graphql-0.6.2_graphql-0.9:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.9.0
-  versions: '>=0.6.2 <0.6.6'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-
-express-graphql-0.6.6_graphql-0.10:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.10.0
-  versions: '>=0.6.6 <0.6.8'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-
-express-graphql-0.6.11_graphql-0.10:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.10.0
-  versions: '0.6.11'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-express-graphql-0.6.11_graphql-0.11:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.11.0
-  versions: '0.6.11'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-
-express-graphql-0.6.12_graphql-0.10:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.10.0
-  versions: '^0.6.12'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-express-graphql-0.6.12_graphql-0.11:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.11.0
-  versions: '^0.6.12'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-express-graphql-0.6.12_graphql-0.12:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.12.0
-  versions: '^0.6.12'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-express-graphql-0.6.12_graphql-0.13:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.13.0
-  versions: '^0.6.12'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-
-express-graphql-0.7.1_graphql-0.12:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.12.0
-  versions: '>=0.7.1 <0.9.0'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-express-graphql-0.7.1_graphql-0.13:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^0.13.0
-  versions: '>=0.7.1 <0.9.0'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-express-graphql-0.7.1_graphql-14:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^14.0.0
-  versions: '>=0.7.1 <0.9.0'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-
-express-graphql-0.9.0_graphql-14:
-  name: express-graphql
-  preinstall: npm uninstall apollo-server-express
-  peerDependencies: graphql@^14.4.1
-  versions: '>=0.9.0 <0.10.0'
-  node: '>=7.6.0'
-  commands: node test/instrumentation/modules/express-graphql.test.js
-
 # - Skip express-graphql@0.10.0 because it briefly, accidentally introduced
 #   syntax that required ES2020 (node v14).
 # - Limit to node >=10.4 because of a known issue.
@@ -298,31 +212,7 @@ express-graphql-0.11.0_graphql-15:
   node: '>=10.4'
   commands: node test/instrumentation/modules/express-graphql.test.js
 
-apollo-server-express-2_12:
-  name: apollo-server-express
-  preinstall: npm uninstall express-graphql
-  peerDependencies: graphql@^0.12.0
-  # We want this version range:
-  #   versions: '>=2.9.16 <2.2 || >= 2.3.2 <3'
-  # but only the latest MAJOR.MINOR.x to reduce the test matrix.
-  #
-  # Maintenance note: This should be updated for newer MAJOR.MINOR releases.
-  versions: '2.9.16 || 2.10.1 || 2.11.0 || 2.12.0 || 2.13.1 || 2.14.5 || 2.15.1 || 2.16.1 || 2.17.0 || 2.18.2 || 2.19.2 || 2.20.0 || 2.21.2 || 2.22.2 || 2.23.0 || 2.24.1 || 2.25.0 || >2.25.x <3'
-  node: '>=6'
-  commands: node test/instrumentation/modules/apollo-server-express.test.js
-apollo-server-express-2_13:
-  name: apollo-server-express
-  preinstall: npm uninstall express-graphql
-  peerDependencies: graphql@^0.13.0
-  # We want this version range:
-  #   versions: '>=2.9.16 <2.2 || >= 2.3.2 <3'
-  # but only the latest MAJOR.MINOR.x to reduce the test matrix.
-  #
-  # Maintenance note: This should be updated for newer MAJOR.MINOR releases.
-  versions: '2.9.16 || 2.10.1 || 2.11.0 || 2.12.0 || 2.13.1 || 2.14.5 || 2.15.1 || 2.16.1 || 2.17.0 || 2.18.2 || 2.19.2 || 2.20.0 || 2.21.2 || 2.22.2 || 2.23.0 || 2.24.1 || 2.25.0 || >2.25.x <3'
-  node: '>=6'
-  commands: node test/instrumentation/modules/apollo-server-express.test.js
-apollo-server-express-2_14:
+apollo-server-express-2_graphql-14:
   name: apollo-server-express
   preinstall: npm uninstall express-graphql
   peerDependencies: graphql@^14.0.0
@@ -334,7 +224,7 @@ apollo-server-express-2_14:
   versions: '2.9.16 || 2.10.1 || 2.11.0 || 2.12.0 || 2.13.1 || 2.14.5 || 2.15.1 || 2.16.1 || 2.17.0 || 2.18.2 || 2.19.2 || 2.20.0 || 2.21.2 || 2.22.2 || 2.23.0 || 2.24.1 || 2.25.0 || >2.25.x <3'
   node: '>=6'
   commands: node test/instrumentation/modules/apollo-server-express.test.js
-apollo-server-express-2_15:
+apollo-server-express-2_graphql-15:
   name: apollo-server-express
   preinstall: npm uninstall express-graphql
   peerDependencies: graphql@^15.0.0
@@ -349,13 +239,16 @@ apollo-server-express-2_15:
   # graphql v15 supports node v8 as a minimum.
   node: '>=8'
   commands: node test/instrumentation/modules/apollo-server-express.test.js
-
-apollo-server-express-3_15:
+apollo-server-express-3_graphql-15:
   name: apollo-server-express
   preinstall: npm uninstall express-graphql
   peerDependencies: graphql@^15.0.0
-  versions: '^3.0.0'
-  node: '>=12'
+  # We want this version range:
+  #   versions: '^3.0.0'
+  # but only test the latest MAJOR.MINOR.x to reduce the test matrix.
+  #
+  # Maintenance note: This should be updated for newer MAJOR.MINOR releases.
+  versions: '3.0.2 || 3.1.2 || 3.2.0 || 3.3.0 || 3.4.1 || 3.5.0 || 3.6.8 || 3.7.0 || 3.8.2 || 3.9.0 || ^3.10.2'
   commands: node test/instrumentation/modules/apollo-server-express.test.js
 
 express-queue:
