--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -1,5 +1,5 @@
 #!/usr/bin/env groovy
-@Library('apm@test/metricbeat') _
+@Library('apm@current') _
 
 pipeline {
   agent { label 'linux && immutable' }
