chore: fix dependabot config
Our dependabot config was invalid YAML.
https://github.com/elastic/apm-agent-nodejs/network/updates showed:
`(<unknown>): found character that cannot start any token while scanning for the next token at line 11 column 26`

This change fixes the file and adds linting of the repo's YAML files
to `npm run lint`.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,10 +8,10 @@ updates:
     reviewers:
       - "elastic/apm-agent-node-js"
     ignore:
-      - dependency-name: @babel/core
-      - dependency-name: @babel/preset-env
-      - dependency-name: @types/node
-      - dependency-name: aws-sdk
+      - dependency-name: "@babel/core"
+      - dependency-name: "@babel/preset-env"
+      - dependency-name: "@types/node"
+      - dependency-name: "aws-sdk"
 
   # Some dev-deps are frequently updated and not that important to be on latest.
   - package-ecosystem: "npm"
@@ -22,7 +22,7 @@ updates:
     reviewers:
       - "elastic/apm-agent-node-js"
     allow:
-      - dependency-name: @babel/core
-      - dependency-name: @babel/preset-env
-      - dependency-name: @types/node
-      - dependency-name: aws-sdk
+      - dependency-name: "@babel/core"
+      - dependency-name: "@babel/preset-env"
+      - dependency-name: "@types/node"
+      - dependency-name: "aws-sdk"
