--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "backport": "backport",
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
-    "lint": "npm run lint:eslint && npm run lint:license-files",
+    "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files",
     "lint:eslint": "eslint .  # requires node >=8.10",
     "lint:fix": "eslint --fix .  # requires node >=8.10",
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
+    "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
     "coverage": "COVERAGE=true ./test/script/run_tests.sh",
     "test": "./test/script/run_tests.sh",
     "test:deps": "dependency-check start.js index.js 'lib/**/*.js' 'test/**/*.js' --no-dev -i async_hooks -i perf_hooks -i parseurl -i node:http",
@@ -162,6 +163,7 @@
     "handlebars": "^4.7.3",
     "https-pem": "^3.0.0",
     "ioredis": "^5.1.0",
+    "js-yaml": "^4.1.0",
     "knex": "^0.95.15",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
