--- a/.ci/.jenkins_nodejs.yml
+++ b/.ci/.jenkins_nodejs.yml
@@ -1,14 +1,15 @@
 NODEJS_VERSION:
-  # - "19" # Uncomment this when there are v19.x releases at https://nodejs.org/download/release/
-  - "18"
-  # - "18.0"  # Uncomment this when "18" is 18.1 or greater.
+  # XXX just v16 for now while we get tests basically running
+  # # - "19" # Uncomment this when there are v19.x releases at https://nodejs.org/download/release/
+  # - "18"
+  # # - "18.0"  # Uncomment this when "18" is 18.1 or greater.
   - "16"
-  - "16.0"
-  - "14"
-  - "14.0"
-  - "12"
-  - "12.0"
-  - "10"
-  - "10.0"
-  - "8"
-  - "8.6"
+  # - "16.0"
+  # - "14"
+  # - "14.0"
+  # - "12"
+  # - "12.0"
+  # - "10"
+  # - "10.0"
+  # - "8"
+  # - "8.6"
