--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS=--require=./apmsetup.js next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_OPTIONS=--require=./apmsetup.js next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "elastic-apm-node": "elastic/apm-agent-nodejs#trentm/feat-nextjs",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
