--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -8,6 +8,7 @@
     "start": "NODE_OPTIONS=--require=elastic-apm-node/start-next.js next start",
     "lint": "next lint"
   },
+  "XXX": "change to 'main' branch for merge, and issue to update this on release",
   "dependencies": {
     "elastic-apm-node": "elastic/apm-agent-nodejs#trentm/feat-nextjs",
     "next": "12.3.1",
