--- a/test/instrumentation/modules/next/a-nextjs-app/.tav.yml
+++ b/test/instrumentation/modules/next/a-nextjs-app/.tav.yml
@@ -1,6 +1,6 @@
 # Test Next.js versions.
 #
-# - We instrument Next.js ">=11.1.0 <13.0.0". I don't see much value in testing
+# - We instrument Next.js ">=11.1.0 <14.0.0". I don't see much value in testing
 #   every patch-level release. Instead we will test the latest patch release
 #   for each minor. (It would be nice if tav supported this natively.)
 # - Next.js 11 supports back to node v12.22.0 and v14.5.0. However, when this
@@ -14,10 +14,18 @@ next-11:
   peerDependencies:
     - "react@^17.0.2"
     - "react-dom@^17.0.2"
-next:
+next-12:
   name: next
   versions: '12.0.10 || 12.1.6 || 12.2.6 || 12.3.1 || >12.3.1 <13'
   node: '>=14.5.0'
+  commands: node ../next.test.js
+  peerDependencies:
+    - "react@^18.2.0"
+    - "react-dom@^18.2.0"
+next:
+  name: next
+  versions: '>=13.0.0 <14'
+  node: '>=14.6.0'
   commands: node ../next.test.js
   peerDependencies:
     - "react@^18.2.0"
