--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,12 @@
     "node_modules",
     "/examples/esbuild/dist",
     "/examples/typescript/dist",
+    "/examples/nextjs",
     "/lib/opentelemetry-bridge/opentelemetry-core-mini",
     "/test/babel/out.js",
     "/test/lambda/fixtures/esbuild-bundled-handler/hello.js",
+    "/test/instrumentation/modules/next/a-nextjs-app/pages",
+    "/test/instrumentation/modules/next/a-nextjs-app/components",
     "/test/sourcemaps/fixtures/lib",
     "/test/sourcemaps/fixtures/src",
     "/test/stacktraces/fixtures/dist",
